@@ -4,6 +4,10 @@ CHANGE LOG
 
 2009-06-14 Warren L. DeLano <warren@delsci.com>	
 
+	* reduced Z scale sensitivity and added mouse_z_scale setting
+	
+2009-06-14 Warren L. DeLano <warren@delsci.com>	
+
 	* reindented source code using GNU indent for better readability 
 	
 	* ugly workarounds added for Radeon HD hardware -- warns user
